# LinuxDev2020

./: .README.md.swp  README.md
02_BuildReq/: .gitignore
03_TerminalProject/: Makefile  README.md  file.txt  task.c
04_Multifile/: Makefile  README.md  prog.c
05_Environmental/: Makefile.am  README.md  Task.c  configure.ac
06_Debugging/: README.md  Task.c
07_DebuggingTracing/: Makefile  README.md  wrapper.c
08_TestingCoverage/: README.md  configure.ac
08_TestingCoverage/src/: Makefile.am  buf.h
08_TestingCoverage/tests/: Makefile.am  my_test.ts
09_I18nL10n/: Makefile.am  main.c  main.pot
10_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  guess.md  main.c  main.po  main.pot  roman.h
11_Toolkits/: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  main  main.c  test.txt
11_Toolkits/.deps/: main.Po
11_Toolkits/autom4te.cache/: output.0  requests  traces.0  traces.1
12_ScriptingText/: Makefile.am  README.md  configure.ac  fun.c
13_PatchInstall/: Makefile.am  README.md  configure.ac  main.c  main.po
